## Process this file with automake to create Makefile.in


 EXTRA_DIST = \
 	alias.h alist.h commands.h config.h ctcp.h dcc.h debug.h     \
	config.h.in exec.h files.h flood.h format.h fset.h funny.h   \
	hash.h hash2.h history.h hook.h ignore.h input.h irc.h       \
	irc_std.h ircaux.h ircterm.h keys.h lastlog.h list.h log.h   \
	misc.h names.h newio.h notice.h notify.h numbers.h output.h  \
	parse.h screen.h server.h stamp-h status.h struct.h timer.h  \
	vars.h whois.h whowas.h window.h module.mk tcommand.h defaults.h

